--- a/pkg/webui/components/notification/notification.styl
+++ b/pkg/webui/components/notification/notification.styl
@@ -14,13 +14,13 @@
 
 $border-width = $cs.xxs
 
-left-border($color)
-  background: linear-gradient(to right, $color, $color 5px, var(--c-bg-neutral-min) 0px)
+left-border($color, $bg)
+  background: linear-gradient(to right, $color, $color 5px, $bg 0px)
 
 .notification
-  left-border(var(--c-border-neutral-normal))
-  border-top: 1px solid var(--c-border-neutral-light)
-  border-right: 1px solid var(--c-border-neutral-light)
+  left-border(var(--c-border-neutral-normal), transparent)
+  border-top: 1px solid var(--c-border-neutral-extralight)
+  border-right: 1px solid var(--c-border-neutral-extralight)
   border-color: var(--c-border-neutral-extralight)
   border-radius: $br.m
   margin-bottom: $ls.xxs
@@ -44,20 +44,42 @@ left-border($color)
       margin-right: 8rem
 
   &.error
-    left-border(var(--c-bg-error-normal))
-    color: var(--c-bg-error-normal)
+    //dark
+    left-border(var(--c-border-error-light), var(--c-bg-error-heavy))
+    // light
+    //left-border(var(--c-border-error-normal), var(--c-bg-error-bold))
+    border-top: 1px solid light-dark(var(--c-border-error-light), var(--c-border-error-extralight))
+    border-right: 1px solid light-dark(var(--c-border-error-light), var(--c-border-error-extralight))
+    border-bottom: 1px solid light-dark(var(--c-border-error-light), var(--c-border-error-extralight))
+    border-color: light-dark(var(--c-border-error-light), var(--c-border-error-extralight))
+    color: var(--c-text-error-normal-hover)
 
   &.warning
-    left-border(var(--c-bg-warning-normal))
-    color: var(--c-text-warning-normal)
+    left-border(var(--c-border-warning-light), var(--c-bg-warning-heavy))
+    border-top: 1px solid var(--c-border-warning-extralight)
+    border-right: 1px solid var(--c-border-warning-extralight)
+    border-bottom: 1px solid var(--c-border-warning-extralight)
+    border-color: var(--c-border-warning-extralight)
+    color: var(--c-text-warning-normal-hover)
 
   &.info
-    left-border(var(--c-text-brand-normal))
+    left-border(var(--c-text-brand-normal), var(--c-bg-info-heavy))
+    border-top: 1px solid var(--c-border-info-extralight)
+    border-right: 1px solid var(--c-border-info-extralight)
+    border-bottom: 1px solid var(--c-border-info-extralight)
+    border-color: var(--c-border-info-extralight)
     color: var(--c-text-brand-normal)
 
   &.success
-    left-border(var(--c-bg-success-normal))
-    color: var(--c-bg-success-normal)
+    //light
+    left-border(var(--c-border-success-normal), var(--c-bg-success-heavy))
+    //dark
+    //left-border(var(--c-border-success-light), var(--c-bg-success-heavy))
+    border-top: 1px solid var(--c-border-success-extralight)
+    border-right: 1px solid var(--c-border-success-extralight)
+    border-bottom: 1px solid var(--c-border-success-extralight)
+    border-color: var(--c-border-success-extralight)
+    color: var(--c-text-success-normal-hover)
 
   .message
     display: flex
