--- a/pkg/webui/components/tooltip/tooltip.styl
+++ b/pkg/webui/components/tooltip/tooltip.styl
@@ -18,8 +18,8 @@
   .tippy-box {
     z-index: $zi.tooltip
     border-radius: $br.l
-    background: var(--c-bg-neutral-heavy)
-    color: var(--c-text-neutral-min)
+    background: light-dark(var(--c-bg-neutral-heavy), var(--c-bg-neutral-normal))
+    color: light-dark(var(--c-text-neutral-min), var(--c-text-neutral-heavy))
     padding: $cs.m
     max-width: $bp.xs3
     transition: opacity, visibility
